amd: wip: Adapt amd perf monitor interface to be useful
It currently exposes unusable metrics

requires amdgpu.pg_mask=0 amdgpu.cg_mask=0 in kernel params

--- a/retrace/daemon/CMakeLists.txt
+++ b/retrace/daemon/CMakeLists.txt
@@ -106,6 +106,8 @@ if (NOT WIN32)
 endif()
 
 add_subdirectory (framestat)
+add_subdirectory (amd_perf_impl)
+
 if (Qt5Widgets_FOUND)
   add_subdirectory (ui)
   add_subdirectory (bargraph)
